# ChangeLog for net-im/nateon
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header:  $

  19 Jan 2008; Sangjin Cho <sangjin3901@chol.com> nateon-1.0beta-svn102.ebuild:
   Seperated nateon svn version

