@@ -2,6 +2,18 @@
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header:  $
 
+  31 Jan 2008; Sangjin Cho <sangjin3901@chol.com> nateon-1.0beta-svn110.ebuild:
+   1. Hompy Button Handled.
+   2. In preferences "Webbrowser change" added
+   3. Drang & drop Added. (File is Filetransfer, URL and text is paste)
+   4. In Chatwindow URLbroken bug fixed
+   5. KDE sound config error Fixed
+   6. File transfer Fixed
+   7. Shortcuts Added. (http://nateonweb.nate.com/help/guide_hottip_v3_08.html)
+   8. 'PRS Server passing' was added
+   9. Not supporting Protocol exception handling (Photo share, Whiteboard, Website share, Remote desktop)
+   10. 1:1, 1:n Chat Start Logic Modified
+    and many bug fixed. if you need more details, see  'version manage log'
   19 Jan 2008; Sangjin Cho <sangjin3901@chol.com> nateon-1.0beta-svn102.ebuild:
    Seperated nateon svn version
 
